manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dotnet-core-web-api
  name: dotnet-core-web-api
  namespace: dotnet-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-core-web-api
  strategy: {}
  template:
    metadata:
      labels:
        app: dotnet-core-web-api
    spec:
      containers:
      - env:
        - name: ASPNETCORE_URLS
          value: http://*:8090
        - name: ASPNETCORE_ENVIRONMENT
          value: Production
        image: dmakeroam/dotnet-core-web-api:1.0.0
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 8090
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
        name: dotnet-core-web-api
        ports:
        - containerPort: 8090
        readinessProbe:
          httpGet:
            path: /health
            port: 8090
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
        resources: {}
