manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dotnet-core-web-api
  name: dotnet-core-web-api
  namespace: dotnet-demo
  annotations:
    dev.okteto.com/auto-ingress: "true"
spec:
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: dotnet-core-web-api
